@@ -27,3 +27,4 @@ PHP                                                                        NEWS
   defined using reflection API. (Johannes)
 - Fixed bug #34286 (__toString() behavior is inconsistent). (Marcus)
 - Fixed bug #33153 (crash in mssql_next result). (Frank)
+- Fixed bug #32009 (crash when mssql_bind() is called more than once). (Frank)
